[tool.poetry]
name = "tz1and-contracts-smartpy"
version = "0.2.3"
description = ""
license = "MIT"
authors = ["852Kerfunkle <852Kerfunkle@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
